# Raytracing

./: CMakeLists.txt
src/: intersection.hpp  main.cpp  material.hpp  math.hpp  object.hpp  primitive.hpp  ray.hpp  rng.hpp  scene.hpp  sphere.hpp  vec.hpp
src/materials/: lambertian.hpp  mirror.hpp
src/primitives/: plane.hpp  sphere.hpp  triangle.hpp
